<resources>
    <string name="app_name">BaseApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="required">required</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="not_match">Not Match</string>
    <string name="no_connection">No Connection</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stationery">Stationery</string>
    <string name="library">library</string>
    <string name="welcome_to_stationery_library">Welcome to Stationery Library,\n your digital haven for all things \n stationery!</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset password</string>
    <string name="skip">Skip</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password!</string>
    <string name="you_don_t_have_account">You don\'t have account?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_now">Verify now</string>
    <string name="didn_t_you_receive_any_code">Didn\'t you receive any code!</string>
    <string name="re_send_code">Re-send code</string>
    <string name="complete_profile">Complete profile</string>
    <string name="new_password">New password</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="name_here">name here</string>
    <string name="last_name_here">last name here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="name_validate_error">Name should not contain special characters or numbers</string>
    <string name="password_is_not_valid">password must be 8 or more characters with at least alphabetical</string>
    <string name="see_all">See all</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="sections">Sections</string>
    <string name="services">Services</string>
    <string name="dollar_sign">$ %1s</string>
    <string name="start_from">Start from</string>
    <string name="find_anything">Find anything...</string>
    <string name="browse_more_than_">Browse more than %1s %2s</string>
    <string name="products">Products</string>
</resources>