<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.WelcomeScreen">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_up_btu"
        >

        <ImageView
            android:layout_width="63dp"
            android:layout_height="190dp"
            android:src="@drawable/splash_screen_ic"
            android:layout_gravity="center"
            android:id="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:paddingTop="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stationery"
                style="@style/textStyleWithInterBold30sp"/>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library"
                style="@style/textStyleWithInterBlack30sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_stationery_library"
            style="@style/placeHolderEdittextStyleWithInterMedium15sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:lineHeight="@dimen/_18sdp"
            android:paddingVertical="@dimen/_7sdp"/>

    </LinearLayout>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        style="@style/app_normal_button_style"
        android:layout_marginHorizontal="@dimen/default_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@id/already_have_account_ly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_btu"
        android:layout_marginBottom="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/_30sdp"
        android:id="@+id/already_have_account_ly"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            style="@style/textStyleWithHintColorInterMedium16sp"
            />

        <Space
            android:layout_width="@dimen/_3sdp"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/textStyleWithInterBold16sp"
            android:id="@+id/sign_in_btu"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>