<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.auth.NewPasswordScreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            style="@style/textStyleWithInterSemiBold24sp"
            android:text="@string/new_password"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="@dimen/default_horizontal_padding"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias=".4"
            android:gravity="center_vertical">

            <com.karimali.baseapp.ui.custom.CustomAppEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="a14iz^d!ms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/new_password"
                app:type="Password" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp" />

            <com.karimali.baseapp.ui.custom.CustomAppEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="a14iz^d!ms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderText="@string/confirm_password"
                app:type="Password"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp" />

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/done_btu"
                style="@style/app_normal_button_style"
                android:layout_marginHorizontal="@dimen/default_horizontal_padding"
                android:layout_marginBottom="@dimen/_10sdp"
                android:elevation="0dp"
                android:shadowColor="@color/white"
                android:text="@string/done"
                app:layout_constraintBottom_toTopOf="@id/already_have_account_ly"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:layout_gravity="center_horizontal"
                app:spinning_bar_color="@color/white"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/already_have_account_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">

                <TextView
                    style="@style/textStyleWithHintColorInterMedium16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_don_t_have_account" />

                <Space
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="match_parent" />

                <TextView
                    style="@style/textStyleWithInterBold16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>