<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.karimali.baseapp.common.utils.Enums.EditTextInputType"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.auth.CompleteProfileScreen">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                style="@style/textStyleWithInterSemiBold24sp"
                android:text="@string/complete_profile"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingHorizontal="@dimen/default_horizontal_padding"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="101dp"
                android:layout_height="101dp"
                android:id="@+id/user_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/default_user_img"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_icon_img"
                app:layout_constraintEnd_toEndOf="@id/user_img"
                app:layout_constraintTop_toBottomOf="@id/user_img"
                app:layout_constraintBottom_toBottomOf="@id/user_img"
                app:layout_constraintStart_toStartOf="@id/user_img"
                app:layout_constraintTop_toTopOf="@id/user_img"
                android:src="@drawable/edit_profile_img"
                app:layout_constraintVertical_bias=".9"
                app:layout_constraintHorizontal_bias=".9"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_img"
                app:layout_constraintVertical_bias=".0"
                >

                <com.karimali.baseapp.ui.custom.CustomAppEditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="+123 456 789"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/phone_number"
                    app:type="Text" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.karimali.baseapp.ui.custom.CustomAppEditText
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="a14iz^d!ms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/password"
                    app:type="Text" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.karimali.baseapp.ui.custom.CustomAppEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="a14iz^d!ms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/password"
                    app:type="Password" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.karimali.baseapp.ui.custom.CustomAppEditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hint="a14iz^d!ms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/password"
                    app:type="Password" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/sign_up_btu"
                    style="@style/app_normal_button_style"
                    android:layout_marginHorizontal="@dimen/default_horizontal_padding"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="0dp"
                    android:shadowColor="@color/white"
                    android:text="@string/sign_up"
                    app:layout_constraintBottom_toTopOf="@id/already_have_account_ly"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <LinearLayout
                    android:id="@+id/already_have_account_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <TextView
                        style="@style/textStyleWithHintColorInterMedium16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_don_t_have_account" />

                    <Space
                        android:layout_width="@dimen/_3sdp"
                        android:layout_height="match_parent" />

                    <TextView
                        style="@style/textStyleWithInterBold16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>